force-app/src/objects/c2g__PrepaidExpensesLog__c.object
<CustomObject>
    <description>Stores the results of each Prepaid Expenses batch iteration.</description>
    <fields>
        <fullName>c2g__LogType__c</fullName>
        <label>Log Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Abort</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__PayableInvoiceExpenseLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the Payable Invoice Expense Line Item for a Prepaid Expense.</description>
        <label>Payable Invoice Expense Line Item</label>
        <referenceTo>c2g__codaPurchaseInvoiceExpenseLineItem__c</referenceTo>
        <relationshipLabel>Payable Invoice Expense Line Items</relationshipLabel>
        <relationshipName>PayableInvoiceExpenseLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PrepaidExpensesBatch__c</fullName>
        <label>Prepaid Expenses Batch</label>
        <referenceTo>c2g__PrepaidExpensesBatch__c</referenceTo>
        <relationshipLabel>Prepaid Expenses Logs</relationshipLabel>
        <relationshipName>PrepaidExpenseLogs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Prepaid Expenses Log</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__PrepaidExpensesBatch__c</columns>
        <columns>c2g__LogType__c</columns>
        <columns>c2g__Message__c</columns>
        <columns>c2g__PayableInvoiceExpenseLineItem__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PEL-{000000000}</displayFormat>
        <label>Prepaid Expenses Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prepaid Expenses Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>